--- a/index.html
+++ b/index.html
@@ -2,323 +2,15 @@
 layout: default
 css: index
 ---
-<div class="alert alert-warning alert-dismissible" role="alert" id="alert">
-  <div class="container">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true" class="croix">&times;</span></button>
-    Votre message a bien été envoyé, je vous repondrai dans les plus brefs délais.
-  </div>
-</div>
-
 
 <!-- navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand scrollTo" href="{% if page.url == '/' %}#top{% else %}{{ site.url }}{% endif %}">Maxime Herbaut</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollTo close-nav" href="#apropos" ><i class="fa fa-user icon-nav"></i> A propos</a></li>
-        <li><a class="scrollTo close-nav" href="#services"><i class="fa fa-desktop icon-nav"></i> Services</a></li>
-        <li><a class="scrollTo close-nav" href="#portfolio"><i class="fa fa-suitcase icon-nav"></i> Portfolio</a></li>
-        <li><a data-toggle="modal" data-target="#myModal" class="cursor close-nav"><strong><i class="fa fa-envelope-o icon-nav"></i> Contact</strong></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 <div class="home-main">
   <div class="box-title">
     <h1>Maxime Herbaut</h1>
     <div class="text">
-      <p>Développeur web “full stack” en freelance dans le Nord,
-        je suis à votre disposition pour vous aider dans la réalisation de vos projets.<span class="text-xs">
-          J'allie front-end et back-end et suis également formé sur les aspects marketing:
-          tel que le référencement (SEO), l’ergonomie et le design, l'analyse digitale...</span>
+      <p>Site actuellement en maintenance...</span>
         </p>
       </div>
-    </div>
-    <div class="box-chevron">
-      <a class="scrollTo chevron-a" href="#apropos"><i class="fa fa-angle-down chevron"></i></a>
     </div>
   </div>
-
-  <div class="container-perso">
-
-    <div class="section">
-      <h2 id="apropos">Un développeur web passionné</h2>
-      <p>
-        Etudiant ingénieur généraliste à l’<a href="http://iteem.ec-lille.fr/" rel="nofollow" target="_blank">Iteem</a>,
-        j'ai créé l'auto entreprise Maxime Herbaut pour mettre mes compétences et mes connaissances
-        au service de votre entreprise. Je suis spécialisé dans la <strong>programmation web</strong> et le
-        <strong>développement de sites internet</strong>.
-      </p>
-
-      <p>
-        Je suis à l’origine de plusieurs <strong>projets de sites</strong> (vitrine, e-commerce, blog…)
-        et d’applications internes présents et utilisés sur la toile.
-      </p>
-
-      <p>
-        Dans le cadre de mes études et de mes stages, je suis au cœur des dernières
-        innovations des <strong>technologies web</strong>, et je peux proposer des <strong>services complets
-          et personnalisés</strong> selon les demandes.
-        </p>
-        <img src="{{ "/image/maximeherbaut.jpg" | prepend: site.baseurl }}" alt="Maxime Herbaut" class="img-circle center-block m" width="200px">
-      </div>
-
-      <div class="section">
-        <h2 id="services">Je développe vos sites web</h2>
-        <p>
-          Je développe de façon personnalisée ou améliore votre <strong>site vitrine</strong>,
-          <strong>site e-commerce</strong> ou <strong>blog</strong> ainsi que
-          vos <strong>applications internes</strong> pour automatiser vos processus.
-        </p>
-        <div class="row sous-section">
-          <div class="col-sm-3 col-xs-6 text-center box-card">
-            <div class="box-icon">
-              <i class="fa fa-eye"></i>
-            </div>
-            <p>Site vitrine</p>
-          </div>
-          <div class="col-sm-3 col-xs-6 text-center box-card">
-            <div class="box-icon">
-              <i class="fa fa-shopping-cart"></i>
-            </div>
-            <p>Site e-commerce</p>
-          </div>
-          <div class="col-sm-3 col-xs-6 text-center box-card">
-            <div class="box-icon">
-              <i class="fa fa-pencil"></i>
-            </div>
-            <p>Blog</p>
-          </div>
-          <div class="col-sm-3 col-xs-6 text-center box-card">
-            <div class="box-icon">
-              <i class="fa fa-tachometer"></i>
-            </div>
-            <p>Application</p>
-          </div>
-        </div>
-
-        <div class="row sous-section">
-          <div class="col-sm-3 text-center">
-            <div class="box-icon">
-              <i class="fa fa-desktop"></i>
-            </div>
-            <p>Responsive design</p>
-          </div>
-          <div class="col-sm-9">
-            <p>
-              Je porte une attention particulière au design afin qu’il corresponde
-              à l’air du temps et soit <strong>Web-responsive</strong>, c’est à dire qu’il
-              s’adapte à l’appareil avec lequel il est ouvert (ordinateur de bureau, tablette, smartphone).
-            </p>
-          </div>
-        </div>
-
-        <div class="row sous-section">
-          <div class="col-sm-3 text-center">
-            <div class="box-icon">
-              <i class="fa fa-search"></i>
-            </div>
-            <p>SEO</p>
-          </div>
-          <div class="col-sm-9">
-            <p>
-              J'utilise les bonnes pratiques <strong>SEO</strong> (Search Engine Optimization) afin
-              d'optimiser le <strong>référencement naturel</strong> du site sur les
-              moteurs de recherche (Google, Bing, Yahoo).
-            </p>
-          </div>
-
-        </div>
-
-        <div class="row sous-section">
-          <div class="col-sm-3 text-center">
-            <div class="box-icon">
-              <i class="fa fa-line-chart"></i>
-            </div>
-            <p>Web analyse</p>
-          </div>
-          <div class="col-sm-9">
-            <p>
-              Le site sera livré lié à un compte <strong>Google Analytics, </strong>
-              analyse des visites et de la fréquentation du site. Un plan de
-              tracking personnalisé peut également être prévu. Certifié Google Analytics IQ
-              depuis Févier 2016.
-            </p>
-          </div>
-        </div>
-
-
-        <div class="row sous-section">
-          <div class="col-sm-3 text-center">
-            <div class="box-icon">
-              <i class="fa fa-users"></i>
-            </div>
-            <p>UX Design</p>
-          </div>
-          <div class="col-sm-9">
-            <p>
-              Le site est developpé de manière à offrir la meilleure <strong>expérience à l'utilisateur</strong> (UX = User eXperience).
-            </p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="section">
-        <h2 id="portfolio">Les réalisations web</h2>
-        <p>
-          Voici quelques <strong>sites internet</strong> que j'ai réalisés pour
-          mes clients. J'utilise différentes téchnologies qui sont des standards
-          à l'heure actuelle :
-        </p>
-        <ul class="techno">
-          <li>Pour le <strong>back-end</strong> (côté serveur) : Le framework PHP5 Symfony2, MySQL</li>
-          <li>Pour le <strong>front-end</strong> (coté client): HTML5, CSS3, bootstrap3, jQuery, AngularJs</li>
-          <li>Pour le <strong>e-marketing</strong> : Google Analytics, Adwords, Webmaster Tool; Bing Webmaster Tool</li>
-        </ul>
-
-
-        <div class="row">
-          <div class="col-sm-6 real">
-            <a href="http://seminyak-villa.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/seminyak-villa.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Seminyak-villa.com"/>
-                <div class="mask">
-                  <h4>Seminyak-villa.com</h4>
-                  <p>Site e-commerce - AngularJs, Symfony2 & ElasticSearch</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://guide.villa-bali.com/fr?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/guide.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="guide.villa-bali.com"/>
-                <div class="mask">
-                  <h4>guide.villa-bali.com</h4>
-                  <p>Blog sur Bali - Symfony2 & Bootstrap3</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://yakside.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/yakside.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="yakside.com"/>
-                <div class="mask">
-                  <h4>Yakside.com</h4>
-                  <p>Site vitrine - Bootstrap3, HTML5 & CSS3</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://www.villa-finder.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/finder.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="villa-finder.com"/>
-                <div class="mask">
-                  <h4>villa-finder.com</h4>
-                  <p>Site entreprise Villa-Finder - Jekyll</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://nordfo.fr/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/nordfo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt=nordfo.fr/>
-                <div class="mask">
-                  <h4>Nord Fibre Optique</h4>
-                  <p>Site entreprise Nord Fibre Optique - Symfony2 & Bootstrap3</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://numerologie-yvonne.com/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/numerologie.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="numerologie-yvonne.com"/>
-                <div class="mask">
-                  <h4>Numérologie-yvonne.com</h4>
-                  <p>Site vitrine - Symfony2 & Bootstrap3</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://www.referencement-web.site/?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/seo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="Référencement SEO"/>
-                <div class="mask">
-                  <h4>Referencement-web.site</h4>
-                  <p>Blog sur le SEO - Jekyll</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 real">
-            <a href="http://www.ocyo-consulting.com?utm_source=maximeherbaut&utm_medium=link&utm_campaign=portfolio" rel="nofollow" target="_blank">
-              <div class="view view-first">
-                <img src="{{ "/image/ocyo.png" | prepend: site.baseurl }}" class="img-responsive img-thumbnail" alt="OCYO Consulting"/>
-                <div class="mask">
-                  <h4>OCYO-Consulting.com</h4>
-                  <p>Site vitrine entreprise - Symfony2 & Bootstrap3</p>
-                  <div class="info">Voir</div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <img src="{{ "/image/max.gif" | prepend: site.baseurl }}" alt="Maxime Herbaut avatar" class="center-block avatar" width="200px">
-      </div>
-    </div>
-
-
-    <div class="modal fade" id="myModal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Envoyez-moi votre message ou appelez moi au 06 60 16 07 13</h4>
-          </div>
-          <form role="form" action="http://formspree.io/maxime-herbaut@orange.fr" id="contactForm" method="post">
-            <div class="modal-body">
-              <div class="form-group">
-                <label for="InputName">Nom</label>
-                <input id="InputName" type="text" class="form-control" name="name" placeholder="Entrez votre nom" required="required">
-              </div>
-              <div class="form-group">
-                <label for="InputEmail">Adresse email</label>
-                <input id="InputEmail" type="email" class="form-control" name="_replyto" placeholder="Entrez votre adresse" required="required">
-              </div>
-              <div class="form-group">
-                <label for="InputArea">Votre message</label>
-                <textarea id="InputArea" class="form-control" rows="5" name="message" required="required" placeholder="Entrez votre message..."></textarea>
-              </div>
-              <input type="hidden" name="_next" value="?message=ok" />
-            </div>
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-default send"><i class="fa fa-paper-plane send-icon"></i> Envoyer votre message</button>
-            </form>
-          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
